[package]
name = "ww_indication"
version = "0.1.0"
edition = "2024"

[dependencies]
wire_weaver = { path = "../../wire_weaver/wire_weaver", default-features = false }
ww_version = { path = "../../wire_weaver/ww_version", default-features = false }
defmt = { version = "1.0", optional = true }

[features]
default = ["std"]
std = ["wire_weaver/std", "ww_version/std"]
defmt = ["dep:defmt", "wire_weaver/defmt", "ww_version/defmt"]